compiler/danubec_parse/src/tests/snapshots/danubec_parse__tests__targeted_implement.snap
---
source: compiler/danubec_parse/src/tests/mod.rs
expression: node
---
Some(
    Krate {
        attributes: [],
        definitions: [
            Definition {
                attributes: [],
                visibility: Private,
                kind: Implement {
                    type_parameters: [],
                    trait_type: Some(
                        Path {
                            path: Path {
                                segments: [
                                    PathSegment {
                                        kind: Identifier(
                                            Identifier {
                                                name: "Foo",
                                            },
                                        ),
                                    },
                                ],
                            },
                        },
                    ),
                    target_type: Path {
                        path: Path {
                            segments: [
                                PathSegment {
                                    kind: Identifier(
                                        Identifier {
                                            name: "Bar",
                                        },
                                    ),
                                },
                            ],
                        },
                    },
                    type_bounds: [],
                    definitions: [],
                },
            },
            Definition {
                attributes: [],
                visibility: Private,
                kind: Implement {
                    type_parameters: [],
                    trait_type: Some(
                        Path {
                            path: Path {
                                segments: [
                                    PathSegment {
                                        kind: Identifier(
                                            Identifier {
                                                name: "Foo",
                                            },
                                        ),
                                    },
                                ],
                            },
                        },
                    ),
                    target_type: Path {
                        path: Path {
                            segments: [
                                PathSegment {
                                    kind: Identifier(
                                        Identifier {
                                            name: "Bar",
                                        },
                                    ),
                                },
                            ],
                        },
                    },
                    type_bounds: [],
                    definitions: [
                        AssociatedDefinition {
                            attributes: [],
                            visibility: Private,
                            kind: Function {
                                name: Identifier {
                                    name: "foo",
                                },
                                type_parameters: [],
                                parameters: [],
                                return_type: None,
                                type_bounds: [],
                                body: Some(
                                    [],
                                ),
                            },
                        },
                        AssociatedDefinition {
                            attributes: [],
                            visibility: Private,
                            kind: Constant {
                                name: Identifier {
                                    name: "BAR",
                                },
                                type: Some(
                                    Path {
                                        path: Path {
                                            segments: [
                                                PathSegment {
                                                    kind: Identifier(
                                                        Identifier {
                                                            name: "i32",
                                                        },
                                                    ),
                                                },
                                            ],
                                        },
                                    },
                                ),
                                initializer: Some(
                                    Expression {
                                        kind: Literal {
                                            value: Integer {
                                                value: 42,
                                            },
                                        },
                                    },
                                ),
                            },
                        },
                        AssociatedDefinition {
                            attributes: [],
                            visibility: Private,
                            kind: Type {
                                name: Identifier {
                                    name: "Baz",
                                },
                                type_parameters: [],
                                type_bounds: [],
                                initializer: None,
                            },
                        },
                    ],
                },
            },
        ],
        children: {},
    },
)
