compiler/danubec_parse/src/tests/snapshots/danubec_parse__tests__top_level_attribute.snap
---
source: compiler/danubec_parse/src/tests/mod.rs
expression: node
---
Some(
    Krate {
        attributes: [
            TopLevelAttribute {
                argument: AttributeArgument {
                    kind: Nested {
                        path: Path {
                            segments: [
                                PathSegment {
                                    kind: Identifier(
                                        Identifier {
                                            name: "a",
                                        },
                                    ),
                                },
                            ],
                        },
                        arguments: [],
                    },
                },
            },
            TopLevelAttribute {
                argument: AttributeArgument {
                    kind: Nested {
                        path: Path {
                            segments: [
                                PathSegment {
                                    kind: Identifier(
                                        Identifier {
                                            name: "a",
                                        },
                                    ),
                                },
                            ],
                        },
                        arguments: [
                            AttributeArgument {
                                kind: KeyValue {
                                    key: Path {
                                        segments: [
                                            PathSegment {
                                                kind: Identifier(
                                                    Identifier {
                                                        name: "key",
                                                    },
                                                ),
                                            },
                                        ],
                                    },
                                    value: None,
                                },
                            },
                        ],
                    },
                },
            },
            TopLevelAttribute {
                argument: AttributeArgument {
                    kind: Nested {
                        path: Path {
                            segments: [
                                PathSegment {
                                    kind: Identifier(
                                        Identifier {
                                            name: "a",
                                        },
                                    ),
                                },
                            ],
                        },
                        arguments: [
                            AttributeArgument {
                                kind: KeyValue {
                                    key: Path {
                                        segments: [
                                            PathSegment {
                                                kind: Identifier(
                                                    Identifier {
                                                        name: "key1",
                                                    },
                                                ),
                                            },
                                        ],
                                    },
                                    value: None,
                                },
                            },
                            AttributeArgument {
                                kind: KeyValue {
                                    key: Path {
                                        segments: [
                                            PathSegment {
                                                kind: Identifier(
                                                    Identifier {
                                                        name: "key2",
                                                    },
                                                ),
                                            },
                                        ],
                                    },
                                    value: None,
                                },
                            },
                        ],
                    },
                },
            },
            TopLevelAttribute {
                argument: AttributeArgument {
                    kind: Nested {
                        path: Path {
                            segments: [
                                PathSegment {
                                    kind: Identifier(
                                        Identifier {
                                            name: "a",
                                        },
                                    ),
                                },
                            ],
                        },
                        arguments: [
                            AttributeArgument {
                                kind: KeyValue {
                                    key: Path {
                                        segments: [
                                            PathSegment {
                                                kind: Identifier(
                                                    Identifier {
                                                        name: "key",
                                                    },
                                                ),
                                            },
                                        ],
                                    },
                                    value: Some(
                                        Expression {
                                            kind: Literal {
                                                value: String {
                                                    segments: [
                                                        Text {
                                                            value: "value",
                                                        },
                                                    ],
                                                },
                                            },
                                        },
                                    ),
                                },
                            },
                        ],
                    },
                },
            },
            TopLevelAttribute {
                argument: AttributeArgument {
                    kind: Nested {
                        path: Path {
                            segments: [
                                PathSegment {
                                    kind: Identifier(
                                        Identifier {
                                            name: "a",
                                        },
                                    ),
                                },
                                PathSegment {
                                    kind: Identifier(
                                        Identifier {
                                            name: "b",
                                        },
                                    ),
                                },
                            ],
                        },
                        arguments: [
                            AttributeArgument {
                                kind: KeyValue {
                                    key: Path {
                                        segments: [
                                            PathSegment {
                                                kind: Identifier(
                                                    Identifier {
                                                        name: "key",
                                                    },
                                                ),
                                            },
                                        ],
                                    },
                                    value: Some(
                                        Expression {
                                            kind: Literal {
                                                value: String {
                                                    segments: [
                                                        Text {
                                                            value: "value",
                                                        },
                                                    ],
                                                },
                                            },
                                        },
                                    ),
                                },
                            },
                        ],
                    },
                },
            },
        ],
        definitions: [],
        children: {},
    },
)
