compiler/danubec_parse/src/tests/snapshots/danubec_parse__tests__trait_definition.snap
---
source: compiler/danubec_parse/src/tests/mod.rs
expression: node
---
Some(
    Krate {
        attributes: [],
        definitions: [
            Definition {
                attributes: [],
                visibility: Private,
                kind: Trait {
                    name: Identifier {
                        name: "Foo",
                    },
                    type_parameters: [],
                    type_bounds: [],
                    definitions: [],
                },
            },
            Definition {
                attributes: [],
                visibility: Private,
                kind: Trait {
                    name: Identifier {
                        name: "Bar",
                    },
                    type_parameters: [],
                    type_bounds: [],
                    definitions: [
                        AssociatedDefinition {
                            attributes: [],
                            visibility: Private,
                            kind: Function {
                                name: Identifier {
                                    name: "foo",
                                },
                                type_parameters: [],
                                parameters: [],
                                return_type: None,
                                type_bounds: [],
                                body: None,
                            },
                        },
                        AssociatedDefinition {
                            attributes: [],
                            visibility: Private,
                            kind: Constant {
                                name: Identifier {
                                    name: "BAR",
                                },
                                type: Some(
                                    Path {
                                        path: Path {
                                            segments: [
                                                PathSegment {
                                                    kind: Identifier(
                                                        Identifier {
                                                            name: "i32",
                                                        },
                                                    ),
                                                },
                                            ],
                                        },
                                    },
                                ),
                                initializer: None,
                            },
                        },
                        AssociatedDefinition {
                            attributes: [],
                            visibility: Private,
                            kind: Type {
                                name: Identifier {
                                    name: "Baz",
                                },
                                type_parameters: [],
                                type_bounds: [],
                                initializer: None,
                            },
                        },
                    ],
                },
            },
        ],
        children: {},
    },
)
